<resources>
    <string name="app_name">Waytous</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_exception">ExceptionActivity</string>
    <string name="app_information">Information</string>
    <string name="caught_an_exception_s">Caught an exception <b>\"%1$s\"</b></string>
    <string name="email">E-mail</string>
    <string name="uncaught_exception_in_waytous" formatted="false">Uncaught exception in Waytous %s.%d</string>
    <string name="send_report_about_an_error">Send report about an error</string>
    <string name="restart">Restart</string>
    <string name="report">Report</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="facebook_app_id">1226806074062997</string>
    <string name="fb_login_protocol_scheme">fb1226806074062997</string>
    <string name="save_location">Save location</string>
    <string name="locations">Locations</string>
    <string name="show_track">Show track</string>
    <string name="hide_track">Hide track</string>
    <string name="show_tracks">Show tracks</string>
    <string name="hide_tracks">Hide tracks</string>
    <string name="chat">Chat</string>
    <string name="set_welcome_message">Set welcome message</string>
    <string name="show_distance">Show distance</string>
    <string name="hide_distance">Hide distance</string>
    <string name="show_distances">Show distances</string>
    <string name="hide_distances">Hide distances</string>
    <string name="show_street_view">Show street view</string>
    <string name="hide_street_view">Hide street view</string>
    <string name="show_navigation">Show navigation</string>
    <string name="hide_navigation">Hide navigation</string>
    <string name="hide_navigations">Hide navigations</string>
    <string name="menu_set_my_name">Set my name</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="private_message">Private message</string>
    <string name="edit">Edit</string>
    <string name="hide">Hide</string>
    <string name="exit_group">Exit group</string>
    <string name="new_message">New message</string>
    <string name="fit_to_screen">Fit to screen</string>
    <string name="share_link">Share link</string>
    <string name="share_location">Share location</string>
    <string name="share_to_facebook">Share to Facebook</string>
    <string name="share_to_twitter">Share to Twitter</string>
    <string name="navigate_on_maps">Navigate on maps</string>
    <string name="change_orientation">Change orientation</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="hide_system_messages">Hide system messages</string>
    <string name="show_system_messages">Show system messages</string>
    <string name="clear_messages">Clear messages</string>
    <string name="smaller_font">Smaller font</string>
    <string name="bigger_font">Bigger font</string>
    <string name="transparent">Transparent</string>
    <string name="opaque">Opaque</string>
    <string name="search">Search</string>
    <string name="hide_places">Hide places</string>
    <string name="remove">Remove</string>
    <string name="show_nmea_status">Show NMEA status</string>
    <string name="hide_nmea_status">Hide NMEA status</string>
    <string name="menu">Menu</string>
    <string name="general">General</string>
    <string name="traffic">Traffic</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="street_view_is_still_not_available_for_this_place">Street view is still not available for this place</string>
    <string name="no_data">No data</string>
    <string name="avoid_highways">Avoid highways</string>
    <string name="avoid_tolls">Avoid tolls</string>
    <string name="avoid_ferries">Avoid ferries</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save_as_default">Save as default</string>
    <string name="be_always_on_the_same_way_with_your_friends">Be always on the same way with your friends</string>
    <string name="user">User</string>
    <string name="delivered">Delivered</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="place">Place</string>
    <string name="toggle_info">Toggle info</string>
    <string name="total">Total:</string>
    <string name="dash">-</string>
    <string name="active">Active:</string>
    <string name="fix">Fix:</string>
    <string name="maxsnr">MaxSNR:</string>
    <string name="snr">SNR</string>
    <string name="signal_to_noise_ratio_db">- signal to noise ratio, dB</string>
    <string name="gt_40_db_excellent_signal"><![CDATA[>40 dB - excellent signal]]></string>
    <string name="_25_40_db_very_good_signal">25–40 dB - very good signal</string>
    <string name="_15_25_db_low_signal">15–25 dB - low signal</string>
    <string name="_10_15_db_very_low_signal">10–15 dB - very low signal</string>
    <string name="lt_10_db_no_signal"><![CDATA[<10 dB - no signal]]></string>
    <string name="_1_32_gps">1–32 - GPS</string>
    <string name="_33_64_sbas">33–64 - SBAS</string>
    <string name="_65_96_glonass">65–96 - GLONASS</string>
    <string name="_193_200_qzss">193–200 - QZSS</string>
    <string name="_201_235_beidou">201–235 - Beidou</string>
    <string name="prn">PRN</string>
    <string name="satellite_number">- satellite number</string>
    <string name="active_nmea">active</string>
    <string name="fix_nmea">fix</string>
    <string name="inactive">inactive</string>
    <string name="location">Location</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="navigate">Navigate</string>
    <string name="alert">Alert</string>
    <string name="continue_string">Continue</string>
    <string name="connecting">Connecting…</string>
    <string name="application_must_continuously_get_your_locations">Application must continuously get your locations. It seems using the GPS-sensor. Please grant application to access your location.</string>
    <string name="gps_access_is_not_granted">GPS access is not granted.</string>
    <string name="application_needs_the_enabled_location_services">Application needs the enabled location services. Please enable it on the next screen.</string>
    <string name="user_has_joined_the_group">User has joined the group.</string>
    <string name="user_left_the_group">User left the group.</string>
    <string name="view">View</string>
    <string name="send_message">Send message</string>
    <string name="cancel">Cancel</string>
    <string name="legal_information_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="i_have_read_and_agree_with_terms_of_service">I\'ve read and agree with terms of service</string>
    <string name="you_are_creating_the_group">You\'re creating the group for real-time sharing your location. But first, you must read and confirm your agreement with Terms of service.</string>
    <string name="you_are_joining_the_group">You\'re joining the group for real-time sharing your location. But first, you must read and confirm your agreement with Terms of service.</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_e_mail">Sign in with e-mail</string>
    <string name="confirm_password">Confirm password.</string>
    <string name="how_would_you_like_to_share_this_link">How would you like to share this link?</string>
    <string name="select">Select…</string>
    <string name="verification_email_has_sent_to_your_address">Verification e-mail has sent to your address. Please follow the link in this email, otherwise your account will be deleted after 30 days of inactivity.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
</resources>