<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/layout_root"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minWidth="@dimen/material_dialog_width_minimum"
              android:orientation="vertical"
              android:paddingBottom="@dimen/material_dialog_content_area_padding_vertical"
              android:paddingLeft="@dimen/material_dialog_content_area_padding_horizontal"
              android:paddingRight="@dimen/material_dialog_content_area_padding_horizontal"
              android:paddingTop="@dimen/material_dialog_content_area_padding_vertical"
    >

    <!--<android.support.design.widget.TextInputLayout
        android:id="@+id/vTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_would_you_like_to_share_this_link"/>

    <TextView
        android:id="@+id/tvLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        tools:text="http://wayto.us/track/DEBUG"
        android:textSize="12sp"/>

    <com.edeqa.waytous.helpers.CustomButton
        android:id="@+id/bShareSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableLeftCompat="@drawable/ic_share_black_24dp"
        android:text="@string/select"/>

    <LinearLayout
        android:id="@+id/layoutShareButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>

    <com.edeqa.waytous.helpers.CustomButton
        android:id="@+id/bShareByMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableLeftCompat="@drawable/ic_mail_outline_black_24dp"
        android:text="@string/email"/>

    <Button
        android:id="@+id/bCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>

</LinearLayout>