<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/layout_root"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:minWidth="@dimen/material_dialog_width_minimum"
              android:orientation="vertical"
              android:paddingBottom="@dimen/material_dialog_content_area_padding_vertical"
              android:paddingLeft="@dimen/material_dialog_content_area_padding_horizontal"
              android:paddingRight="@dimen/material_dialog_content_area_padding_horizontal"
              android:paddingTop="@dimen/material_dialog_content_area_padding_vertical"
              android:weightSum="1">

    <LinearLayout
        android:id="@+id/layout_sign_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/button_sign_with_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_facebook_black"
            android:text="@string/sign_in_with_facebook"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_sign_with_facebook_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_sign_with_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_google_black"
            android:text="@string/sign_in_with_google"/>

        <Button
            android:id="@+id/button_sign_with_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_twitter_black"
            android:text="@string/sign_in_with_twitter"/>

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/button_sign_with_twitter_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_sign_with_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:text="@string/sign_in_with_e_mail"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_avatar_placeholder"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitCenter"
            android:tint="@android:color/darker_gray"
            android:tintMode="src_atop"
            app:srcCompat="@drawable/ic_navigation_twinks_black_24dp"
            tools:visibility="visible"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/pb_avatar_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignLeft="@id/iv_avatar_placeholder"
            android:layout_alignStart="@id/iv_avatar_placeholder"
            android:layout_alignTop="@id/iv_avatar_placeholder"
            android:padding="20dp"/>

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitCenter"
            android:visibility="gone"/>


        <LinearLayout
            android:id="@+id/layout_provider_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/material_baseline_grid_1x"
            android:paddingStart="@dimen/material_baseline_grid_1x"
            >

            <ImageView
                android:id="@+id/iv_sign_provider_twitter"
                android:layout_width="@dimen/material_tooltip_text_size"
                android:layout_height="@dimen/material_tooltip_text_size"
                app:srcCompat="@drawable/ic_twitter_logo_blue_24dp"
                />

            <ImageView
                android:id="@+id/iv_sign_provider_facebook"
                android:layout_width="@dimen/material_tooltip_text_size"
                android:layout_height="@dimen/material_tooltip_text_size"
                app:srcCompat="@drawable/ic_facebook_logo_blue_24dp"
                />

            <ImageView
                android:id="@+id/iv_sign_provider_google"
                android:layout_width="@dimen/material_tooltip_text_size"
                android:layout_height="@dimen/material_tooltip_text_size"
                app:srcCompat="@drawable/ic_google_logo_color_24dp"
                />

            <ImageView
                android:id="@+id/iv_sign_provider_password_unverified"
                android:layout_width="@dimen/material_tooltip_text_size"
                android:layout_height="@dimen/material_tooltip_text_size"
                app:srcCompat="@drawable/ic_mail_outline_black_24dp"
                />

            <ImageView
                android:id="@+id/iv_sign_provider_password_verified"
                android:layout_width="@dimen/material_tooltip_text_size"
                android:layout_height="@dimen/material_tooltip_text_size"
                app:srcCompat="@drawable/ic_verified_user_black_24dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/iv_avatar_placeholder"
            android:layout_toRightOf="@+id/iv_avatar_placeholder"
            android:layout_toLeftOf="@+id/layout_provider_icon"
            android:layout_toStartOf="@+id/layout_provider_icon"
            >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="@dimen/material_baseline_grid_2x"
                android:paddingStart="@dimen/material_baseline_grid_2x"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                tools:text="Name of user is very long text for test how this text will be shown in the dialog"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="@dimen/material_baseline_grid_2x"
                android:paddingStart="@dimen/material_baseline_grid_2x"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                tools:text="&lt;user@mail.com&gt;"/>

            <ProgressBar
                android:id="@+id/pb_verification_sending"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingTop="@dimen/material_baseline_grid_2x"/>

            <TextView
                android:id="@+id/tv_verification_email_sent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="@dimen/material_baseline_grid_1x"
                android:paddingStart="@dimen/material_baseline_grid_1x"
                android:paddingTop="@dimen/material_baseline_grid_2x"
                android:text="@string/verification_email_has_sent_to_your_address"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        </LinearLayout>




    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/button_forgot_password"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/material_baseline_grid_2x">

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/material_color_red_900"
            tools:text="Error text"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_signing"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tv_signing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/material_baseline_grid_3x"
            tools:text="Signing using Google"/>

    </RelativeLayout>

</LinearLayout>